Done with methods

--- a/report_latex/custom.bib
+++ b/report_latex/custom.bib
@@ -196,3 +196,52 @@ author = {Kahneman, Daniel},
 keywords = {Decision making; Reasoning (Psychology); Judgment; Cognitive styles; PSYCHOLOGY / Applied Psychology; PSYCHOLOGY / Cognitive Psychology & Cognition; PSYCHOLOGY / Social Psychology; Decision making; Judgement; Deciding; Decision (Psychology); Decision analysis; Decision processes; Making decisions; Management -- Decision making; Management decisions; Styles Cognitive; Self-help publications},
 lccn = {2020951207},
 }
+
+@article{DBLP:journals/corr/GuoB16,
+  author       = {Cheng Guo and
+                  Felix Berkhahn},
+  title        = {Entity Embeddings of Categorical Variables},
+  journal      = {CoRR},
+  volume       = {abs/1604.06737},
+  year         = {2016},
+  url          = {http://arxiv.org/abs/1604.06737},
+  eprinttype    = {arXiv},
+  eprint       = {1604.06737},
+  timestamp    = {Mon, 13 Aug 2018 16:49:04 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/GuoB16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-1810-04805,
+  author       = {Jacob Devlin and
+                  Ming{-}Wei Chang and
+                  Kenton Lee and
+                  Kristina Toutanova},
+  title        = {{BERT:} Pre-training of Deep Bidirectional Transformers for Language
+                  Understanding},
+  journal      = {CoRR},
+  volume       = {abs/1810.04805},
+  year         = {2018},
+  url          = {http://arxiv.org/abs/1810.04805},
+  eprinttype    = {arXiv},
+  eprint       = {1810.04805},
+  timestamp    = {Tue, 30 Oct 2018 20:39:56 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1810-04805.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-1903-10676,
+  author       = {Iz Beltagy and
+                  Arman Cohan and
+                  Kyle Lo},
+  title        = {SciBERT: Pretrained Contextualized Embeddings for Scientific Text},
+  journal      = {CoRR},
+  volume       = {abs/1903.10676},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1903.10676},
+  eprinttype    = {arXiv},
+  eprint       = {1903.10676},
+  timestamp    = {Mon, 01 Apr 2019 14:07:37 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1903-10676.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
