--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 101,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 102,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 103,
       "metadata": {},
       "outputs": [
         {
@@ -49,7 +49,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 85,
+          "execution_count": 103,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 104,
       "metadata": {},
       "outputs": [
         {
@@ -219,7 +219,7 @@
               "max      38.000000  "
             ]
           },
-          "execution_count": 86,
+          "execution_count": 104,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 105,
       "metadata": {},
       "outputs": [
         {
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 106,
       "metadata": {},
       "outputs": [
         {
@@ -293,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 107,
       "metadata": {},
       "outputs": [
         {
@@ -313,7 +313,7 @@
               "Name: Web of Science Categories, dtype: int64"
             ]
           },
-          "execution_count": 89,
+          "execution_count": 107,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 108,
       "metadata": {},
       "outputs": [
         {
@@ -360,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [
         {
@@ -391,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 110,
       "metadata": {},
       "outputs": [
         {
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 111,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -445,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 112,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -454,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 113,
       "metadata": {},
       "outputs": [
         {
@@ -516,7 +516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 114,
       "metadata": {},
       "outputs": [
         {
@@ -532,7 +532,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 96,
+          "execution_count": 114,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -543,16 +543,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 115,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x20b86421f10>"
+              "<seaborn.axisgrid.PairGrid at 0x20b89399f10>"
             ]
           },
-          "execution_count": 97,
+          "execution_count": 115,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -600,23 +600,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 116,
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Convert funding to categorical\n",
         "df['Funding'] = df['Funding Agency and Grant Number'].notna()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 117,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# get rid of the wlsivier copyright\n",
+        "df['Abstract'] = df['Abstract'].apply(lambda x: x.split('(C)')[0])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 118,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\Artem\\AppData\\Local\\Temp\\ipykernel_14496\\2947684058.py:4: FutureWarning: Starting with pandas version 3.0 all arguments of to_csv except for the argument 'path_or_buf' will be keyword-only.\n",
+            "C:\\Users\\Artem\\AppData\\Local\\Temp\\ipykernel_14496\\3470930813.py:5: FutureWarning: Starting with pandas version 3.0 all arguments of to_csv except for the argument 'path_or_buf' will be keyword-only.\n",
             "  df_features.to_csv('features.csv', '\\t')\n"
           ]
         }
@@ -653,7 +664,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.11.8"
     }
   },
   "nbformat": 4,
