--- a/report_latex/w266 report.tex
+++ b/report_latex/w266 report.tex
@@ -35,7 +35,6 @@
 
 \title{Assessing the Impact Score of Scientific Publications through the Analysis of Abstracts and their Metadata}
 
-
 \author{Artem Lebedev\\
   UC Berkeley / Berkeley, CA \\
   \texttt{artem.lebedev@berkeley.edu} \\\And
@@ -45,8 +44,9 @@
 
 \begin{document}
 \maketitle
+
 \begin{abstract}
-An impact score of the academic paper is a metric critically important for a scientist's career and attraction of funding for future research. The ability to predict the potential score of a paper could help scientists adjust their presentation strategy to achieve maximum impact. Natural language processing (NLP) is a logical tool to examine what leads to a scientific article's strong impact score because it allows one to analyze an article’s content numerically. In this paper we demonstrate the use of sciBERT with a combination of convolutional neural net to predict the impact factor of the paper based on it abstract.
+An impact score of the academic paper is a metric critically important for a scientist's career and attraction of funding for future research. The ability to predict the potential score of a paper could help scientists adjust their presentation strategy to achieve maximum impact. Natural language processing (NLP) is a logical tool to examine what leads to a scientific article's strong impact score because it allows one to analyze an article’s content numerically. In this paper we investigate if the content of the abstract matters for the selection of the journal, or meta-factors, such as author address and number of co-authors are sufficient to select the bset possible journal for submission.\footnote{The code and data available on \href{https://github.com/ArtemChemist/w266_project}{GitHub} and \href{https://drive.google.com/drive/folders/1OkSzswtFvqA6_FD35vvSCU31kSd1ECA2?usp=drive_link}{GDrive}.}
 \end{abstract}
 
 \section{Introduction}
@@ -74,13 +74,18 @@ Since our aim is to support researcher decision on publication strategy, we focu
 
 'Abstract' is the most important and relevant feature of the paper. Together with the title and author's keywords it represents condensed meaning of the paper. Full text of the paper would have been a lot more information reach, but would also require significantly more computational resources. 
 
-Figure~\ref{fig:paiplot} shows the distribution and correlation matrix for the main quantitative variables available in the metadata
+Figure~\ref{fig:paiplot} shows the distribution and correlation matrix for the main quantitative variables available in the metadata. Figure~\ref{fig:countries} demonstrates distribution of the papers by the country of author's origin and the country where the paper was published. Domination of the USA is not surprising, given the preference for English language. Notably, most papers from non-English speaking authors, which is likely not reflected in the training of BERT model that we will be using later.
 \begin{figure}
 	\includegraphics[width= \columnwidth]{./Images/Pairplot.png}
 	\caption{Correlation plot of main numerical features}
 	\label{fig:paiplot}
 \end{figure}
-Appendix~\ref{sec:appendix} will contain full EDA
+
+\begin{figure}
+	\includegraphics[width= \columnwidth]{./Images/Countries.png}
+	\caption{Countries of authors and publishers}
+	\label{fig:countries}
+\end{figure}
 
 \section{Methods}
 We will use regression models based on neural networks to predict the impact of the publications. To evaluate the importance of text data, we will compare predictive power of the model that includes text data vs the model that is based solely on metadata. We will reject null hypothesis if the addition of text data to the model significantly increase the Pearson's correlation coefficient between observed and predicted impact values.
@@ -95,65 +100,27 @@ The exact way representations of numerical, categorical and text data are combin
 For the baseline model we built a two regression models. One based on metadata only was based on numerical features concatenated with learned embedings for each of the categorical features. The resulting vector was fed directly into the dense output layer with one element and linear activation. Interestingly, adding additional dense layers before the out layer did not improve performance of this baseline model. The model including text data had identical architecture, but also included cls token of uncased BERT output from the abstract. Figure~\ref{fig:meta_no_meta} shows correlation plots obtained for two models. Observed-predicted Pearson's correlation using metadata alone was 0.38, and adding BERT's cls token improved it to 0.47 (p = 0.0034 after Fisher's transformation, one-tailed, assuming independent samples). 
 \begin{figure}
 	\includegraphics[width= \columnwidth]{./Images/Metadata w BERT.png}
-	\caption{Observed-Predicted correlation.}
+	\caption{Observed-Predicted for models w metadata.}
 	\label{fig:meta_no_meta}
 \end{figure}
 
-While the improvement from adding text data was statistically significant, neither model crossed our pre-determined threshold of r = 0.5, casting doubts on the predictive power of this approach. To improve the correlation we experimented with model based on BERT token alone. Surprisingly, just cls token from the BERT transformation of abstract, coupled with a dense layer and a regression layer yielded r=0.50 and switching to sciBERT improved it even further, up to 0.56 (p = 0.021). Figure~\ref{fig:BERT_vs_sciBERT} illustrates this experiment.
+While the improvement from adding text data was statistically significant, neither model crossed our pre-determined threshold of r = 0.5, casting doubts on the predictive power of this approach. To improve the correlation we experimented with model based on BERT token alone. Surprisingly, just cls token from the BERT transformation of abstract, coupled with a dense layer and a regression layer yielded r=0.50 and switching to sciBERT improved it even further, up to 0.56 (p = 0.021). Figure~\ref{fig:BERT_vs_sciBERT} illustrates this experiment. Notably, the learning curves indicated significant over-fitting despite aggressive 0.3 dropout.
 
 \begin{figure}
 	\includegraphics[width= \columnwidth]{./Images/BERT vs sciBERT.png}
-	\caption{Observed-Predicted correlation for two BERT models.}
+	\caption{Observed-Predicted for two BERT models.}
 	\label{fig:BERT_vs_sciBERT}
 \end{figure}
 
 \section{Conclusions and Next Steps}
-Section for work you plan to do before submitting the final version. IN the final version that is' going be only conclusions.
-\begin{figure}
-	\includegraphics[width= \columnwidth]{./Images/Countries.png}
-	\caption{Countries of authors and publishers}
-	\label{fig:countries}
-\end{figure}
+Our preliminary experiments strongly support rejection of null hypothesis, but practical usability of the predictions from our model is still in question.
 
-\section*{Limitations}
-While we are open to different types of limitations, just mentioning that a set of results have been shown for English only probably does not reflect what we expect. 
-Mentioning that the method works mostly for languages with limited morphology, like English, is a much better alternative.
-In addition, limitations such as low scalability to long text, the requirement of large GPU resources, or other things that inspire crucial further investigation are welcome.
+To improve observed-predicted correlation we plan to investigate using sentence-level cls-tokens as well as full set of word embeddings, possibly in combination with CNN architecture. To combat over fitting we plan to enrich data set by adding concatenating titles to abstracts. As a long-shot experiment we also plan to augment data with synthetic abstracts compiled from individual sentences of papers published in the same journal in the same year.
+
+Target variable transformation might be beneficial as well. Presently we use linear regression, which might produce negative values. By replacing JIF with JIF rank calculated on the training data set and using sigmoid activation on the output layer, we might achieve improved model performance. 
 
 % Entries for the entire Anthology, followed by custom entries
 \bibliography{custom}
 \bibliographystyle{acl_natbib}
-
-\appendix
-
-\section{Example Appendix}
-\label{sec:appendix}
-
-This is a section in the appendix.
-% This is a table template
-\begin{table}
-	\centering
-	\begin{tabular}{lc}
-		\hline
-		\textbf{Command} & \textbf{Output}\\
-		\hline
-		\verb|{\`i}| & {\`i} \\ 
-		\verb|{\.I}| & {\.I} \\ 
-		\verb|{\o}| & {\o} \\
-		\verb|{\aa}| & {\aa}  \\\hline
-	\end{tabular}
-	\begin{tabular}{lc}
-		\hline
-		\textbf{Command} & \textbf{Output}\\
-		\hline 
-		\verb|{\l}| & {\l} \\ 
-		\verb|{\~n}| & {\~n} \\ 
-		\verb|{\H o}| & {\H o} \\ 
-		\verb|{\v r}| & {\v r} \\ 
-		\hline
-	\end{tabular}
-	\caption{Example commands for accented characters, to be used in, \emph{e.g.}, Bib\TeX{} entries.}
-	\label{tab:accents}
-\end{table}
 
 \end{document}
