--- a/make new labels.ipynb
+++ b/make new labels.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 169,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 170,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 171,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 172,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -145,21 +145,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 178,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "1.0000577788060436"
+              "JIF\n",
+              "0.193     1\n",
+              "0.290     3\n",
+              "0.303     4\n",
+              "0.404     5\n",
+              "0.414     6\n",
+              "0.457     7\n",
+              "0.460     8\n",
+              "0.480     9\n",
+              "0.481    10\n",
+              "0.485    13\n",
+              "0.509    15\n",
+              "0.529    17\n",
+              "0.561    19\n",
+              "0.579    21\n",
+              "0.621    22\n",
+              "0.624    24\n",
+              "0.631    25\n",
+              "0.635    26\n",
+              "0.688    27\n",
+              "0.689    29\n",
+              "Name: JIF, dtype: int64"
             ]
           },
-          "execution_count": 168,
+          "execution_count": 178,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
-      "source": []
+      "source": [
+        "df.JIF.groupby(df.JIF).size().cumsum().head(20)"
+      ]
     },
     {
       "cell_type": "code",
