Started on postmortem analysis

--- a/report_latex/w266 report.tex
+++ b/report_latex/w266 report.tex
@@ -70,34 +70,22 @@ A few attempts have been made to address this issue, demonstrating modest but en
 \section{Data}
 We extracted data from the Web of Science, a platform that provides access to citation metrics for the majority of life science publications. The platform provides csv files with the article abstract along with the ISSN identifier of the journal and other metadata. To reduce variability unrelated to the research question we focus on a narrow field of radioligand therapy and select only original peer-reviewed articles published in English between 2000 and 2022. JIFs are available from Claritive Analytics “Journal Impact Factor Report” and contain the journal ISSN as well as the impact factor, by year. Merging these two datasets on ISSN we achieve our raw dataset, containing approximately 4500 records.
 
-Since our aim is to support researcher decision on publication strategy, we focus on the features available to authors at the time of submission: 'Year Published', 'Authors', 'Document Title', 'Author Keywords', 'Abstract', 'Author Address', 'Funding Agency and Grant Number', 'Cited Reference Count', 'Page Count'. Using author identities as features would result in very sparse set of categorical variables, therefore we reduced the author information to just the number of authors and the author address to just the country. We also reduced the funding information to a binary variable funded/not-funded. 'Abstract' is the most important and relevant feature of the paper. Together with the title and author's keywords it represents condensed meaning of the paper. Full text of the paper would have been a lot more information reach, but would also require significantly more computational resources. 
+Since our aim is to support researcher decision on publication strategy, we focus on the features available to authors at the time of submission: 'Year Published', 'Authors', 'Document Title', 'Author Keywords', 'Abstract', 'Author Address', 'Funding Agency and Grant Number', 'Cited Reference Count', 'Page Count'. Using author identities as features would result in very sparse set of categorical variables, therefore we reduced the author information to just the number of authors and the author address to just the country. We also reduced the funding information to a binary variable funded/not-funded. 'Abstract' is the most important and relevant feature of the paper. Together with the title and author's keywords it represents condensed meaning of the paper.  
  
-Figure~\ref{fig:paiplot} shows the distribution and correlation matrix for the main quantitative variables available in the metadata. Figure~\ref{fig:countries} demonstrates distribution of the papers by the country of author's origin and the country where the paper was published. Domination of the USA is not surprising, given the preference for English language. Notably, most papers from non-English speaking authors, which is likely not reflected in the training of BERT model that we will be using later. Preliminary EDA showed that some abstracts contained publisher's copyright statements, essentially introducing a leak from label to the features. This statements were removed from the abstracts. We also filtered out all papers with JIF > 20, to reduce the influence of the few unusually good papers.
-\begin{figure}
-	\includegraphics[width= \columnwidth]{./Images/Pairplot.png}
-	\caption{Correlation plot of main numerical features}
-	\label{fig:paiplot}
-\end{figure}
-
-\begin{figure}
-	\includegraphics[width= \columnwidth]{./Images/Countries.png}
-	\caption{Countries of authors and publishers}
-	\label{fig:countries}
-\end{figure}
+EDA revealed that numerical variables are mostly uncorrelated with each other and label is roughly normally distributed around mean of 4.09 with standard deviation of 2.21. Less that 0.1\% of the papers had JIF > 20, but some reached JIF as high as 86. To avoid undue influence of these high performers we filtered out all papers with JIF above 20. Unsurprisingly, USA and the UK dominate the countries of author's origin, but in total more than 80 countries were represented. Majority of abstracts are less that 400 words long with noticeable peak around 250, a popular cut-off required by publishers. For the purpose of tokenization we set 400 tokens a the max length. Some abstracts contained publisher's copyright statements that we removed to avoid a leak from label to the features. Full EDA is available in EDA.ipynb notebook in the project github repository. 
 
 \section{Methods}
 We use regression models based on neural networks to predict the impact of the publications. To evaluate the importance of text data, we compare predictive power of the model that includes text data vs the model that is based solely on metadata. Pearson's correlation coefficient between observed and predicted impact values is a metric we use to test our hypothesis. 
 
 Features selected after EDA fall into three general categories: numerical features, categorical features and text. While numerical features can be included into the model as-is, categorical variables and text need to be transformed before they become inputs into neural network. One-hot-encoded representation is a common way to transform categorical variables, but it lacks the ability to capture patterns present in the data. For instance, papers originating from Canada are likely similar to ones written in the USA, but very different from papers submitted from China. To preserve these patterns, we have chosen to use learned embedding representation of the categorical variables \citep{DBLP:journals/corr/GuoB16}.
 
-Transformation of text into contextually-aware embedding is commonly achieved using BERT \citep{DBLP:journals/corr/abs-1810-04805}. sciBERT, a similar model trained on the large corpus of medical and scientific literature, was recently presented \citep{DBLP:journals/corr/abs-1903-10676} and we plan to compare these two models. Both variants of BERT yield several vectors that can represent the text: pooled vector, cls vector or a set of vectors for each input token. 
-
-The exact way representations of numerical, categorical and text data are combined will be investigated. For the baseline model we concatenated all three vectors and used them as input into a linear regression. In the future we plan to also subdivide the abstract into individual sentences and use cls tokens for more fine-grained text representation. We also plan to use the 2D-representation of text based on the individual word embedding (or sentence-level cls tokens) and process it with convolutional  neural network. Other combinations of the sentence-level and abstract-level embeddings can be used as well \citep{hs2022}. It is also intriguing to use individual embeddings of the keywords, because they were selected by the authors as the most representative of the paper.
+Transformation of text into contextually-aware embedding is commonly achieved using BERT \citep{DBLP:journals/corr/abs-1810-04805}. sciBERT, a similar model trained on the large corpus of medical and scientific literature, was recently presented \citep{DBLP:journals/corr/abs-1903-10676} and we plan to compare these two models. Both variants of BERT yield several vectors that can represent the text: pooled vector, cls vector or a set of vectors for each input token. For the baseline model we concatenated all three vectors and used them as input into a linear regression. We also investigated using all word embeddings in the model, rather than relying on the summarization tokens produced by BERT model.
 
 \section{Results and discussion}
-Before testing our hypothesis we tested a few model architecture choices. First we investigated how the number of dense layers affects performance. We used cls token generated by standard uncased BERT and added no dense layers, one or two dense layers on top of the 768-dimensional vector. All dense layers had 768 neurons. Correlation between predicted and observed JIFs improved upon addition of the first layer (r = 0.54 vs 0.57 p = 8e-05 after Fisher's transformation, one-tailed, assuming dependent samples), but did not improve with addition of the second dense layer (r = 0.56). Replacing standard BERT with sciBERT, a model trained on scientific text, we further improved the result (r = 0.57 vs 0.64 p = 2e-08). 
+\subsection{Testing of the main hypothesis}
+\textbf{Preliminary experiments} Before testing our hypothesis we tested a few model architecture choices. First we investigated how the number of dense layers affects performance. We used cls token generated by standard uncased BERT and added no dense layers, one or two dense layers on top of the 768-dimensional vector. All dense layers had 768 neurons. Correlation between predicted and observed JIFs improved upon addition of the first layer (r = 0.54 vs 0.57 p = 8e-05 after Fisher's transformation, one-tailed, assuming dependent samples), but did not improve with addition of the second dense layer (r = 0.56). Replacing standard BERT with sciBERT, a model trained on scientific text, we further improved the result (r = 0.57 vs 0.64 p = 2e-08). In a separate experiment we demonstrated that use of \textit{cls} token for this regression problem is preferred over the pooled token.
 
-For the baseline model we built three regression models. The one based on metadata only included numerical features concatenated with learned embeddings for each of the categorical features. The resulting vector was fed directly into the dense output layer with one element and linear activation.  Supporting intuition behind our null-hypothesis, r value for this model was 0.55, far better than a random guess. This indicates that metadata alone, with no features related to the essence of the paper, can predict the impact of the paper. The second model included only sciBERT \textit{cls} token and no meta data. This model exhibited r-value of 0.63, a statistically significant (p=0.0008, independent samples) improvement. The final model included both metadata and sciBERT \textit{cls} token concatenated into one vector before the final dense and regression layer. This model demonstrated r = 0.67, an improvement over both baseline models. It exceeded performance of the pure metadata model with p-value 2E-07. Based on that we can reject the null hypothesis and conclude that addition of a feature related to the paper actual meaning increased model's predictive power by approx. 20\%.
+\textbf{Main hypothesis testing} For the baseline model we built three regression models. The one based on metadata only included numerical features concatenated with learned embeddings for each of the categorical features. The resulting vector was fed directly into the dense output layer with one element and linear activation.  Supporting intuition behind our null-hypothesis, r value for this model was 0.55, far better than a random guess. This indicates that metadata alone, with no features related to the essence of the paper, can predict the impact of the paper. The second model included only sciBERT \textit{cls} token and no meta data. This model exhibited r-value of 0.63, a statistically significant (p=0.0008, independent samples) improvement. The final model included both metadata and sciBERT \textit{cls} token concatenated into one vector before the final dense and regression layer. This model demonstrated r = 0.67, an improvement over both baseline models. It exceeded performance of the pure metadata model with p-value 2E-07. Based on that we can reject the null hypothesis and conclude that addition of a feature related to the paper actual meaning increased model's predictive power by approx. 20\%.
 Figure~\ref{fig:meta_no_meta} shows the distribution of the observed and predicted JIFs for the first and the third model. Interestingly, both models are reluctant to predict low JIFs. Additionally, learning curves showed clear signs of over-fitting with validation loss far exceeding training loss. 
 \begin{figure}
 	\includegraphics[width= \columnwidth]{./Images/meta no meta.png}
@@ -105,11 +93,18 @@ Figure~\ref{fig:meta_no_meta} shows the distribution of the observed and predict
 	\label{fig:meta_no_meta}
 \end{figure}
 
-As a first attempt to improve our model, we added drop-out layers after learned embeddings for categorical variables and also tried predicting relative ranking of the paper rather than JIF directly. To that end we calculated the proportion of papers that have the same or lower JIF for each paper (rank). We used max and min JIF obtained from training data and assumed it is representative of the whole population. Scaling label to (0,1) allowed us to use sigmoid activation in the regression layer, which we hoped would make model more sensitive to the changes in the middle of the distribution. However, this approach resulted in lower model performance (r=0.61).
+\textbf{Rank prediction} As a first attempt to improve our model, we added drop-out layers after learned embeddings for categorical variables and also tried predicting relative ranking of the paper rather than JIF directly. To that end we calculated the proportion of papers that have the same or lower JIF for each paper (rank). We used max and min JIF obtained from training data and assumed it is representative of the whole population. Scaling label to (0,1) allowed us to use sigmoid activation in the regression layer, which we hoped would make model more sensitive to the changes in the middle of the distribution. However, this approach resulted in lower model performance (r=0.61). Using linear activation instead of sigmoid resulted in even worse performance. The only improvement that we obtained in these experiments is reduced over-fitting: validation loss exceeded training loss later in the training, pointing to the usefulness of the dropout layers.
 
-In the next attempt to combat over-fitting we introduced data augmentation.
+\subsection{Performance improvement}
+\textbf{LSTM for abstract representation} XXXXXXXXXX
 
+\textbf{CNN for abstract representation} XXXXXXXXXX
 
+\textbf{Addition of the title} XXXXXXXXXX
+
+\textbf{Data augmentation} In the next attempt to combat over-fitting we introduced data augmentation.
+
+\subsection{Error analysis}
 
 \section{Conclusions and Next Steps}
 Our preliminary experiments strongly support rejection of our somewhat cynical null hypothesis. More to that, performance of our best model approaches useful, with more than 70\% correlation between predicted and observed, this model can give the researcher a good estimate of what journals are good fit for their paper. 
