--- a/report_latex/w266 report.tex
+++ b/report_latex/w266 report.tex
@@ -105,6 +105,23 @@ Figure~\ref{fig:meta_no_meta} shows the distribution of the observed and predict
 \textbf{Data augmentation} In the next attempt to combat over-fitting we introduced data augmentation.
 
 \subsection{Error analysis}
+\begin{figure}
+	\includegraphics[width= \columnwidth]{./Images/JIF_hist.png}
+	\caption{Overlaid distributions of observed and predicted values for the best model.}
+	\label{fig:JIF_hist}
+\end{figure}
+
+Comparing distribution of the predicted JIFs and the observed values (Figure~\ref{fig:JIF_hist}) we can see that distribution of the predicted values is a lot closer to normal than the distribution of the observed. Two departures from the normality for the observed values are immediately obvious: spikes in the frequency at JIFs 1 and 2.5. Our model failed to capture these two features. Instead, those papers that should have been in those spikes were assigned higher JIF resulting in over-prediction for JIFs around 4.  Consequently, the correlation between predicted and observed values is far from perfect (Figure~\ref{fig:best_model_corr}). 
+
+Cursory examination of the mispredicted records yield a plausible explanation. Some journals, in particular those with lower rank, allow for much longer abstracts, essentially turning the abstract into a mini-paper, including sections on experimental details, methods and discussion. This is not a standard practice, most other journals require abstract to be under 250 words and convey only general idea of the paper. The model likely assigned higher value to these unusually high quality abstracts. This hypothesis is partially confirmed by the modelling of the prediction error (\textit{vide infra}).
+
+To elucidate the role of various factors in making erroneous predictions, we built a series of simple linear models predicting the difference between observed and predicted JIF. The only factor that had reasonable predictive power (r = 0.71 for observed and predicted error) was the journal name. Interestingly, very different kinds of journals had the same coefficient explaining the error: prestigious "Proceedings of the National Academy of Science" was under-predicted by the same factor as an obscure "Chinese Chemical Letters". Some of this can be explained by the phenomenon mentioned above, but some of the journals are prone to error because their impact factor is influenced by factors not included in the model. For instance, "Chinese Chemical Letters" publish a lot of reviews than naturally have much higher impact factor, thus pushing overall journal impact factor up. We explicitly excluded reviews from our analysis and could not capture this trend.
+
+\begin{figure}
+	\includegraphics[width= \columnwidth]{./Images/Best model.png}
+	\caption{Observed-Predicted correlation for the best model.}
+	\label{fig:best_model_corr}
+\end{figure}
 
 \section{Conclusions and Next Steps}
 Our preliminary experiments strongly support rejection of our somewhat cynical null hypothesis. More to that, performance of our best model approaches useful, with more than 70\% correlation between predicted and observed, this model can give the researcher a good estimate of what journals are good fit for their paper. 
