--- a/report_latex/w266 report.tex
+++ b/report_latex/w266 report.tex
@@ -102,7 +102,7 @@ In attempt to increase predictive power of the model we hypothesized that incorp
 
 \textbf{CNN for abstract representation} XXXXXXXXXX
 
-\textbf{Addition of the title} In attempt to enrich the data set and reduce over fitting added paper title to the abstract. Two approaches were investigated. In the simplest case we concatenated title to the abstrcat before training a model the same way as in section  
+\textbf{Addition of the title} In attempt to enrich the data set and reduce over fitting we added paper title to the abstract. Two approaches were investigated: generation of a septate \textit{cls}  token and concatenation of title and abstract. Our initial intuition was that title of a paper is meant to be information dense and should be represented in the final regression approximately equal to the full abstract. Therefore we generated two separate \textit{cls} tokens and concatenated them together with the embeddings for the categorical features and a vector of numerical features (\href{https://github.com/ArtemChemist/w266_project/blob/main/Notebooks/sciBERT%20%2B%20sciBERT%20%2B%20small%20meta.ipynb}{notebook}). Contrary to our expectations, this approach resulted in reduced performance (r = 0.62). A more straightforward and less computationally expensive approach is to concatenate title to the abstract and generate one \textit{cls}. This method resulted in small, but significant performance improvement (r = 0.69) and also reduced over-fitting.     
 
 \textbf{Data augmentation} In the next attempt to combat over-fitting we introduced data augmentation.
 
