Added first notebook

--- a/report_latex/w266 report.tex
+++ b/report_latex/w266 report.tex
@@ -102,9 +102,9 @@ In attempt to increase predictive power of the model we hypothesized that incorp
 
 \textbf{CNN for abstract representation} XXXXXXXXXX
 
-\textbf{Addition of the title} In attempt to enrich the data set and reduce over fitting we added paper title to the abstract. Two approaches were investigated: generation of a septate \textit{cls}  token and concatenation of title and abstract. Our initial intuition was that title of a paper is meant to be information dense and should be represented in the final regression approximately equal to the full abstract. Therefore we generated two separate \textit{cls} tokens and concatenated them together with the embeddings for the categorical features and a vector of numerical features (\href{https://github.com/ArtemChemist/w266_project/blob/main/Notebooks/sciBERT%20%2B%20sciBERT%20%2B%20small%20meta.ipynb}{notebook}). Contrary to our expectations, this approach resulted in reduced performance (r = 0.62). A more straightforward and less computationally expensive approach is to concatenate title to the abstract and generate one \textit{cls}. This method resulted in small, but significant performance improvement (r = 0.69) and also reduced over-fitting.     
+\textbf{Addition of the title} In attempt to enrich the data set and reduce over fitting we added paper title to the abstract. Two approaches were investigated: generation of a septate \textit{cls}  token and concatenation of title and abstract. Our initial intuition was that title of a paper is meant to be information dense and should be represented in the final regression approximately equal to the full abstract. Therefore we generated two separate \textit{cls} tokens and concatenated them together with the embeddings for the categorical features and a vector of numerical features (\href{https://github.com/ArtemChemist/w266_project/blob/main/Notebooks/sciBERT%20%2B%20sciBERT%20%2B%20small%20meta.ipynb}{notebook}). Contrary to our expectations, this approach resulted in reduced performance (r = 0.62). A more straightforward and less computationally expensive approach is to concatenate title to the abstract and generate one \textit{cls} (\href{https://github.com/ArtemChemist/w266_project/blob/main/Notebooks/sciBERT%20w%20tit%2Babs.ipynb}{notebook}). This method resulted in small, but significant performance improvement (r = 0.69) and also reduced over-fitting.
 
-\textbf{Data augmentation} In the next attempt to combat over-fitting we introduced data augmentation.
+\textbf{Data augmentation} The fact that concatenation of title with abstract improved performance indicated that diverse set of training data, rather than sophisticated model, is the key to further improvements. Obtaining more training data would require paid subscription and we decided to try data augmentation instead. First, all title+abstract paragraphs were ranked by JIF, and then for each record we generated a set of new abstracts by replacing n-th sentence of the given abstract first with the n-th sentence of the previous abstract and then with the n-th sentence of the next abstract in the dataset. Replacement was done 2k times, where k is the number of sentences in the shortest of the three abstracts. Each of the k replacements were done on the original abstract. For these new abstracts all other features and labels were kept equal to the abstract being augmented. The resulting training set was randomly shuffled before model training. Validation data set was not augmented. (\href{https://github.com/ArtemChemist/w266_project/blob/main/Notebooks/sciBERT%20aug.ipynb}{notebook}).   This procedure increased the size of the training dataset approximately 10 fold, but introduced only minimal perturbance to the original abstract as only one sentence was replaced, and the implant was taken from a paper with a very similar JIF. This augmentation procedure yielded the best performing model, with correlation between predicted and observed JIF r=0.73. Figure~\ref{fig:best_model_corr} shows a 2D-histogram of the predictions done on the validation dataset.
 
 \subsection{Error analysis}
 \begin{figure}
